--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,3 +1,4 @@
+/* General */
 /* TODO: Add more variables */
 :root {
     --body-bg-color: #010101;
@@ -25,6 +26,57 @@ body {
     font-family:'Consolas';
     overflow:hidden;
 }
+
+/* Command Palette */
+#palette {
+    display:flex;
+    flex-flow:column nowrap;
+    
+    position:absolute;
+    max-width:500px;
+    width:50%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
+    top:10%;
+    left:50%;
+    transform:translateX(-50%);
+    
+    background-color:red;
+    border-radius:3px;
+    box-shadow: 0px 0px 15px 7px rgba(0,0,0,0.5)
+    
+    z-index: 5;
+}
+#palette-input {
+    margin-left:10px;
+    margin-right:10px;
+    padding:10px;
+    
+    color:white;
+    border: none;
+    outline: none;
+    background-color:blue;
+    border-radius:3px;
+}
+.palette-item {
+    margin-top:10px;
+    margin-left:10px;
+    margin-right:10px;
+    padding:10px;
+    
+    color:white;
+    background-color:green;
+    border-radius:3px;
+}
+.palette-divider {
+    margin: 0px;
+    margin-right: 10px;
+    margin-left: 10px;
+    padding: 0px;
+}
+
+/* Content Layout */
 #box {
     display:flex;
     flex-flow:column nowrap;
@@ -49,51 +101,6 @@ body {
 #sidebar:hover {
     cursor:pointer;
     width:45px;
-}
-.editor {
-    box-sizing:border-box;
-    width: 50px;
-    flex:1 1 auto;
-    
-    padding:10px;
-    overflow:hidden;
-    
-    background-color:var(--buffer-bg-color);
-    border-radius:3px 3px 0px 0px;
-    color:var(--buffer-text-color);
-}
-.lines {
-    height: 1%;
-}
-.line {
-    display:inline-block;
-    white-space: pre-wrap;
-    margin:2px;
-    width:auto;
-}
-.md-h1 {
-    font-size:1.5em;
-}
-.md-h2 {
-    font-size:1.25em;
-}
-.link {
-    text-decoration: underline;
-    color:var(--link-color);
-}
-.selected-line {
-    color:var(--buffer-bg-color);
-    background-color:var(--buffer-selection-color);
-    border-radius:3px;
-}
-.cursor {
-    color:var(--buffer-bg-color);
-    background-color:var(--buffer-text-color);
-    border-radius:1px;
-}
-.cursor-vbar {
-    color:var(--buffer-text-color);
-    background: linear-gradient(to right, var(--buffer-text-color) 0%, var(--buffer-text-color) 20%, transparent 20%);
 }
 #top-bar {
     box-sizing:border-box;
@@ -124,10 +131,64 @@ body {
     vertical-align:middle;
     color:var(--buffer-text-color);
 }
-/*.katex {
-    border:solid 1px var(--bottom-bar-bg-color);
+
+/* Editor */
+.editor {
+    box-sizing:border-box;
+    width: 50px;
+    flex:1 1 auto;
+    
+    padding:10px;
+    overflow:hidden;
+    
+    background-color:var(--buffer-bg-color);
+    border-radius:3px 3px 0px 0px;
+    color:var(--buffer-text-color);
+}
+.lines {
+    height: 1%;
+}
+.line {
     display:inline-block;
-    min-width: 20px;
+    white-space: pre-wrap;
+    margin:2px;
+    width:auto;
+}
+
+/* Editor Decorations */
+.md-h1 {
+    font-size:1.5em;
+}
+.md-h2 {
+    font-size:1.25em;
+}
+.link {
+    text-decoration: underline;
+    color:var(--link-color);
+}
+.selected-line {
+    color:var(--buffer-bg-color);
+    background-color:var(--buffer-selection-color);
     border-radius:3px;
-    padding: 2px;
-}*/
+}
+.cursor {
+    color:var(--buffer-bg-color);
+    background-color:var(--buffer-text-color);
+    border-radius:1px;
+}
+.cursor-vbar {
+    color:var(--buffer-text-color);
+    background: linear-gradient(to right, var(--buffer-text-color) 0%, var(--buffer-text-color) 20%, transparent 20%);
+}
+.katex {
+    z-index: 2;
+}
+table, th, td {
+    color: white;
+    border: 1px solid white;
+    padding: 5px;
+    margin-bottom:-1em;
+}
+table {
+    border-collapse: collapse;
+}
