--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -2,11 +2,17 @@
 /* TODO: Add more variables */
 :root {
     --body-bg-color: #010101;
+    
     --buffer-bg-color: #111;
     --buffer-text-color: #eee;
     --buffer-selection-color: #baa;
+    
     --top-bar-bg-color: #151515;
     --bottom-bar-bg-color: #333;
+    
+    --palette-bg-color: #222;
+    --palette-item-bg-color: #283828;
+    
     --link-color: #45edc3;
 }
 html, body {
@@ -29,6 +35,10 @@ body {
 
 /* Command Palette */
 #palette {
+    visibility:hidden;
+    opacity: 0;
+    transition: visibility 0.1s, opacity 0.1s;
+    
     display:flex;
     flex-flow:column nowrap;
     
@@ -42,9 +52,9 @@ body {
     left:50%;
     transform:translateX(-50%);
     
-    background-color:red;
-    border-radius:3px;
-    box-shadow: 0px 0px 15px 7px rgba(0,0,0,0.5)
+    background-color:var(--palette-bg-color);
+    border-radius:5px;
+    box-shadow: 0px 0px 15px 2px rgba(0,0,0,1.0)
     
     z-index: 5;
 }
@@ -56,7 +66,7 @@ body {
     color:white;
     border: none;
     outline: none;
-    background-color:blue;
+    background-color:var(--palette-item-bg-color);
     border-radius:3px;
 }
 .palette-item {
@@ -66,7 +76,7 @@ body {
     padding:10px;
     
     color:white;
-    background-color:green;
+    background-color:var(--palette-item-bg-color);
     border-radius:3px;
 }
 .palette-divider {
@@ -82,6 +92,7 @@ body {
     flex-flow:column nowrap;
     height:100%;
     width:100%;
+    overflow: hidden;
 }
 #content {
     display:flex;
@@ -89,6 +100,7 @@ body {
     flex-flow:row nowrap;
     margin:5px;
     margin-bottom:0px;
+    overflow: hidden;
 }
 #sidebar {
     background-color:#3D995E;
@@ -137,16 +149,17 @@ body {
     box-sizing:border-box;
     width: 50px;
     flex:1 1 auto;
+    overflow:hidden;
     
     padding:10px;
-    overflow:hidden;
     
     background-color:var(--buffer-bg-color);
     border-radius:3px 3px 0px 0px;
     color:var(--buffer-text-color);
 }
 .lines {
-    height: 1%;
+    height:100%;
+    overflow-y:scroll;
 }
 .line {
     display:inline-block;
